background image now display correctly on the iPad.
Images will crop, but they cover the viewport without distortion

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,10 +46,6 @@ body {
 	background-color:#fff;
 }
 
-img {
-	max-width:100%;
-}
-
 a {
 	color:#1c1917;
 	text-decoration:none;
@@ -275,6 +271,21 @@ sub {
 	overflow:scroll;
 	background-color:rgba(255,255,255,0.5);
 	padding:1em;
+}
+.background-div {
+	position: absolute;
+	overflow: hidden;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	z-index: -1;
+}
+.background-div img {
+	width: auto;
+	height: auto;
+	min-height: 100%;
+	min-width: 100%;
 }
 
 /* Tablet */
